Bug 299175 - Akonadi (Browser) Bookmarks are shown as unread-emails
Summary: Akonadi (Browser) Bookmarks are shown as unread-emails
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 4.8.2
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-01 15:14 UTC by FabiB
Modified: 2013-02-05 12:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments
image localbookmarks in kontact/kmail (8.07 KB, image/png)
2012-05-02 13:30 UTC, FabiB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description FabiB 2012-05-01 15:14:36 UTC
when you select a "local bookmark" in your akonadi configuration and restart akonadi. you will have all your selected bookmarks in kmail. they where listet as unreadet emails and you can not "read" them because then akonadi and or "locale bookmarks" crashes again and again

Reproducible: Always

Steps to Reproduce:
1.open akonadi configuration
2.add "locale bookmark" and select you rekonq/konqueror bookmarks.xml ( ~/.kde/share/apps/konqueror/bookmarks.xml )
3.restart akonadi and open kmail/kontact
Actual Results:  
all you bookmarks are in kmail listet as new folders and unreated. and local bookmarks / akonadi crashes for even if you try to mark them as readet

Expected Results:  
they should not appear in kmail
Comment 1 Laurent Montel 2012-05-02 13:17:23 UTC
can not reproduce it.
Backtrace ?
Comment 2 FabiB 2012-05-02 13:30:58 UTC
Created attachment 70806 [details]
image localbookmarks in kontact/kmail


Application: Lokale Lesezeichen (akonadi_localbookmarks_resource), signal: Aborted
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#7  0xb7721424 in __kernel_vsyscall ()
#8  0xb64e11ef in raise () from /lib/i386-linux-gnu/libc.so.6
#9  0xb64e4835 in abort () from /lib/i386-linux-gnu/libc.so.6
#10 0xb672313d in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#11 0xb6720ed3 in ?? () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#12 0xb6720f0f in std::terminate() () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#13 0xb67210b4 in __cxa_rethrow () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#14 0xb68d7a55 in QEventLoop::exec (this=0xbf877524, flags=...) at kernel/qeventloop.cpp:218
#15 0xb68dceba in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#16 0xb5890a74 in QApplication::exec () at kernel/qapplication.cpp:3820
#17 0xb75fdaa1 in Akonadi::ResourceBase::init (r=0x9ddfdb8) at ../../akonadi/resourcebase.cpp:412
#18 0x0804d7a7 in Akonadi::ResourceBase::init<LocalBookmarksResource> (argc=3, argv=0xbf877694) at /usr/include/akonadi/resourcebase.h:188
#19 0x0804b70b in main (argc=3, argv=0xbf877694) at ../../../resources/localbookmarks/localbookmarksresource.cpp:207
Comment 3 Cédric Bellegarde 2012-05-16 17:33:57 UTC
Same for me, listed as local email....

Same with akonadi dockmanager script...

Seems localbookmarks declare itself as message/rfc822.
Comment 4 Laurent Montel 2013-02-05 12:46:17 UTC
I fixed crash.
but can't see bookmark as message.
Comment 5 Laurent Montel 2013-02-05 12:52:31 UTC
Git commit f2e7ddeaff03b2a2063800fcb6990c9193f98438 by Montel Laurent.
Committed on 05/02/2013 at 13:51.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 299175 - Akonadi (Browser) Bookmarks are shown as unread-emails

FIXED-IN: 4.10.1

M  +1    -1    resources/localbookmarks/localbookmarksresource.cpp

http://commits.kde.org/kdepim-runtime/f2e7ddeaff03b2a2063800fcb6990c9193f98438