Fix Bug 299175 - Akonadi (Browser) Bookmarks are shown as unread-emails

FIXED-IN: 4.10.1
BUG: 299175