resources/localbookmarks/localbookmarksresource.cpp
@@ -132,7 +132,7 @@ void LocalBookmarksResource::itemRemoved( const Akonadi::Item &item )
 
 static Collection::List listRecursive( const KBookmarkGroup &parentGroup, const Collection &parentCollection )
 {
-  const QStringList mimeTypes = QStringList() << "message/rfc822" << Collection::mimeType();
+  const QStringList mimeTypes = QStringList() << "application/x-xbel" << Collection::mimeType();
 
   Collection::List collections;
 
